test/library/standard/Sort/errors/sortDomainArray.sparse7.good
sortDomainArray.chpl:39: error: '.sorted()' is only supported on associative domains
